Improve testing and fix all the stuff that never worked.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "haxe.displayConfigurations": [
         ["build.hxml"]
-    ]
+    ],
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#390E7E",
+        "titleBar.activeBackground": "#5013B1",
+        "titleBar.activeForeground": "#FCFBFF"
+    }
 }
